Implement Andy.Engine framework for LLM-driven agents
This commit introduces a production-grade framework for building LLM-driven agents with the following components:

Core Components:
- Agent: Main orchestrator with event-driven architecture
- Planner: LLM-based decision making with structured output
- Executor: Tool execution with schema validation and retry policies
- Critic: Goal assessment and recommendation engine
- State Manager: Persistent state tracking and working memory
- Observation Normalizer: Structured extraction of key facts
- Policy Engine: Error handling, retries, and fallback strategies

Features:
- Integration with Andy ecosystem (Tools, LLM, Model, Context)
- JSON Schema validation for tool inputs/outputs
- Exponential backoff with jitter for retries
- Budget management (turns and wall clock time)
- Event system for monitoring and debugging
- Builder pattern for flexible configuration

The framework is designed for NuGet publishing as Andy.Engine package
and will be used by andy-cli to provide agent capabilities.

--- a/src/Andy.Engine/Andy.Engine.csproj
+++ b/src/Andy.Engine/Andy.Engine.csproj
@@ -4,14 +4,30 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>andy-engine</PackageId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
+
+    <!-- Package Information -->
+    <PackageId>Andy.Engine</PackageId>
     <Title>Andy Engine</Title>
-    <Description>Andy.Engine — core engine components for Andy.</Description>
+    <Description>Production-grade C# framework for LLM-driven agents with planning, tool execution, and state management. Part of the Andy ecosystem.</Description>
+    <Version>1.0.0-alpha.1</Version>
+    <Authors>Sam Rivoli</Authors>
+    <Company>Rivoli AI</Company>
+    <Copyright>Copyright © 2025 Rivoli AI</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/rivoli-ai/andy-engine</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/rivoli-ai/andy-engine</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>llm;agent;ai;orchestration;tools;planning</PackageTags>
     <PackageIcon>andy_engine_icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="../../assets/andy_engine_icon.png" Pack="true" PackagePath="/" Visible="false" Condition="Exists('../../assets/andy_engine_icon.png')" />
+    <None Include="../../README.md" Pack="true" PackagePath="/" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +36,8 @@
     <PackageReference Include="Andy.Llm" Version="2025.9.19-rc.15" />
     <PackageReference Include="Andy.Model" Version="2025.9.20-rc.4" />
     <PackageReference Include="Andy.Tools" Version="2025.9.5-rc.15" />
+    <PackageReference Include="JsonSchema.Net" Version="7.0.0" />
+    <PackageReference Include="Polly" Version="8.5.2" />
   </ItemGroup>
 
 </Project>
