--- a/src/Andy.Engine/Andy.Engine.csproj
+++ b/src/Andy.Engine/Andy.Engine.csproj
@@ -31,12 +31,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Andy.Engine.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Andy.Configuration" Version="2025.7.16-rc.6" />
     <PackageReference Include="Andy.Context" Version="2025.9.23-rc.4" />
     <PackageReference Include="Andy.Llm" Version="2025.9.19-rc.15" />
     <PackageReference Include="Andy.Model" Version="2025.9.20-rc.4" />
     <PackageReference Include="Andy.Tools" Version="2025.9.5-rc.15" />
     <PackageReference Include="JsonSchema.Net" Version="7.0.0" />
+    <PackageReference Include="JsonPointer.Net" Version="5.0.0" />
     <PackageReference Include="Polly" Version="8.5.2" />
   </ItemGroup>
 
