Standardize license to Apache-2.0 and update package metadata
- Change license from MIT to Apache-2.0 in README.md and Andy.Engine.csproj
- Update Directory.Build.props icon reference from andy_tui_icon.png to andy_engine_icon.png
- Update package description to match Andy.Engine project
- Remove "Production-grade" from README description

--- a/src/Andy.Engine/Andy.Engine.csproj
+++ b/src/Andy.Engine/Andy.Engine.csproj
@@ -15,7 +15,7 @@
     <Authors>Sam Rivoli</Authors>
     <Company>Rivoli AI</Company>
     <Copyright>Copyright © 2025 Rivoli AI</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/rivoli-ai/andy-engine</PackageProjectUrl>
     <RepositoryUrl>https://github.com/rivoli-ai/andy-engine</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
