--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,7 +12,7 @@
     <Company>Rivoli AI</Company>
     <Copyright>Copyright © Rivoli AI</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageIcon>andy_tui_icon.png</PackageIcon>
+    <PackageIcon>andy_engine_icon.png</PackageIcon>
     <RepositoryType>git</RepositoryType>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
@@ -20,7 +20,7 @@
     <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
     <Deterministic>true</Deterministic>
     <Version>0.1.0</Version>
-    <Description>Andy.Tui v2 — Reactive TUI framework for .NET.</Description>
+    <Description>Andy.Engine -- agentic engine</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReadmeFile Condition="Exists('README.md')">README.md</PackageReadmeFile>
   </PropertyGroup>
