Reorganize benchmark code into separate projects
Move benchmark framework and validators from Andy.Benchmarks to src/Andy.Engine.Benchmarks, and test scenarios to tests/Andy.Engine.Tests/Benchmarks. Mark benchmarks project as non-packable to ensure only Andy.Engine is included in NuGet packages.

--- a/tests/Andy.Engine.Tests/Andy.Engine.Tests.csproj
+++ b/tests/Andy.Engine.Tests/Andy.Engine.Tests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../src/Andy.Engine/Andy.Engine.csproj" />
+    <ProjectReference Include="..\..\src\Andy.Engine.Benchmarks\Andy.Engine.Benchmarks.csproj" />
   </ItemGroup>
 
 </Project>
