--- a/examples/SimpleAgent/SimpleAgent.csproj
+++ b/examples/SimpleAgent/SimpleAgent.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>SimpleAgent.BenchmarkProgram</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../../src/Andy.Engine/Andy.Engine.csproj" />
+    <ProjectReference Include="../../src/Andy.Engine.Benchmarks/Andy.Engine.Benchmarks.csproj" />
   </ItemGroup>
 
   <ItemGroup>
