--- a/examples/InteractiveConsoleAgent/InteractiveConsoleAgent.csproj
+++ b/examples/InteractiveConsoleAgent/InteractiveConsoleAgent.csproj
@@ -12,8 +12,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Andy.Llm" Version="2025.9.19-rc.15" />
+    <PackageReference Include="Andy.Llm" Version="0.1.0" />
     <PackageReference Include="Andy.Tools" Version="2025.9.5-rc.15" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
