Remove 'unknown' model fallbacks and update to Andy.Llm 0.1.8
Changes:
- Replaced "unknown" fallbacks with exceptions in FileSystemIntegrationTestBase
- Now throws InvalidOperationException with detailed diagnostics when model info missing
- Updated Andy.Llm dependency from 0.1.7 to 0.1.8
- Changed test configuration model from gpt-5-codex to gpt-4o

Rationale:
- 'unknown' values hide real issues and make debugging difficult
- Exceptions surface problems immediately with actionable error messages
- gpt-5-codex is only supported in v1/responses endpoint, not v1/chat/completions
- gpt-4o is fully supported for chat completions

Error reporting improvements:
- CapturingLlmProvider.CompleteAsync throws if model not in request or response
- RunBenchmarkAsync throws if model not captured in LLM interactions
- Both include detailed diagnostic information about what was missing

--- a/NuGet.config
+++ b/NuGet.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
@@ -6,5 +6,6 @@
     <add key="andy-llm-local" value="../andy-llm/nupkgs" />
     <!-- Public NuGet feed -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="LocalPackages" value="/tmp/nuget-local" />
   </packageSources>
 </configuration>
