Fix tool response handling and improve error reporting
Changes:
- Temporarily using local Andy.Llm 0.1.8 with tool response fix
- TODO: Update to published Andy.Llm version once 0.1.9 is available on NuGet
- Removed 'unknown' model fallbacks in FileSystemIntegrationTestBase
- Now throws InvalidOperationException with diagnostics when model info missing
- SimpleAgent includes exception details in StopReason for better error messages
- Fixed mocked test validation to allow placeholder model
- Changed default provider back to openai/large-code in test config

Error reporting improvements:
- Before: Generic 'error' or 'Model information was not captured'
- After: Full exception message with context in test failures

Tool response fix (Andy.Llm 0.1.8+):
- Fixed OpenAIProvider to handle Content + ToolCallId format
- Resolves 'tool_call_id did not have response messages' errors
- Compatible with both Parts-based and simple tool response formats

--- a/src/Andy.Engine/Andy.Engine.csproj
+++ b/src/Andy.Engine/Andy.Engine.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <PackageReference Include="Andy.Configuration" Version="2025.7.16-rc.6" />
     <PackageReference Include="Andy.Context" Version="2025.9.23-rc.4" />
-    <PackageReference Include="Andy.Llm" Version="2025.10.29-rc.18" />
+    <PackageReference Include="Andy.Llm" Version="0.1.8" />
     <PackageReference Include="Andy.Model" Version="2025.9.20-rc.4" />
     <PackageReference Include="Andy.Tools" Version="2025.10.16-rc.16" />
     <PackageReference Include="JsonSchema.Net" Version="7.0.0" />
