Update Andy.Engine for Cerebras function calling tests
- Update Andy.Llm to 0.1.9 with function calling fixes
- Enable cerebras/large-open provider in test configuration
- Add debug logging for Andy.Llm to diagnose tool calling issues
- Add temporary local package source for testing Andy.Llm 0.1.9

--- a/NuGet.config
+++ b/NuGet.config
@@ -2,7 +2,8 @@
 <configuration>
   <packageSources>
     <clear />
-    <!-- Local andy-llm packages for testing -->
+    <!-- Temporary local andy-llm 0.1.9 for testing ToolChoice fix -->
+    <add key="local-temp" value="/tmp/local-nuget" />
     <!-- Public NuGet feed -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
