Improve logging and prompts, update to Andy.Llm 2025.10.30-rc.21
- Update Andy.Llm to version 2025.10.30-rc.21 which fixes ToolChoice infinite loop
- Add local andy-llm package source for testing rc.21
- Enhance SimpleAgent conversation history logging to show full details without truncation
- Improve FileSystemIntegrationTestBase logging (Warning → Debug level)
- Add file structure context to test system prompts
- Enhance system prompts with instructions to prevent parent directory access
- Add instruction to provide final text response after tool execution

These changes fix max_turns_exceeded errors in tests by improving agent behavior
and using the corrected Andy.Llm package that allows models to choose when to
stop calling tools and provide final responses.

--- a/NuGet.config
+++ b/NuGet.config
@@ -6,5 +6,6 @@
     <add key="local-temp" value="/tmp/local-nuget" />
     <!-- Public NuGet feed -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="andy-llm-local" value="/tmp/andy-llm-fixed" />
   </packageSources>
 </configuration>
