Upgrade to Andy.Llm 2025.11.19-rc.24 and fix filesystem test suite
## Package Upgrades
- Upgraded Andy.Llm from 2025.10.30-rc.23 to 2025.11.19-rc.24
- Upgraded Andy.Tools to 2025.10.16-rc.16 (dependency requirement)
- Cleaned up NuGet.config (removed non-existent local package sources)
- Added cerebras/glm-4.6 provider configuration to test settings

## Breaking Change: ToolResults Format
Updated SimpleAgent to use new Andy.Llm 2025.11.19-rc.24 message format:
- Changed from ToolCallId to ToolResults list with ToolResult objects
- Fixed array parameter deserialization (added DeserializeArray helper)
- Now properly handles tool result messages with success/error indicators

## Validation System Enhancements
Major improvements to FileSystemIntegrationTestBase validation:

1. **Dual Content Checking**: Now validates both tool results AND agent LLM
   responses, handling cases where LLMs ask for clarification instead of
   calling tools with invalid parameters

2. **Path Normalization**: Added intelligent path comparison in
   ToolInvocationValidator:
   - Normalizes paths with ../ sequences using Path.GetFullPath()
   - Strips trailing directory separators (documents/ vs documents)
   - Ensures different path representations are recognized as equivalent

3. **Retry Support**: Prioritizes successful tool invocations when validating
   parameters in multi-invocation scenarios, allowing LLMs to intelligently
   retry after errors

## Test Fixes
Fixed all CopyFile test scenarios to match actual tool behavior:

**Test Setup Corrections:**
- CopyFile_OverwriteDisabled: existing.txt → existing_dest.txt
- CopyFile_CreateDestinationDirectory: deep/nested/path → new_dir/subdir
- CopyFile_ExcludeDirectories: source_dir → project
- CopyFile_ExcludePatterns: source_dir → source_with_logs
- CopyFile_ToDirectory: source.txt → document.pdf, target_dir → documents
- CopyFile_PreserveTimestamps: source.txt → timestamped.txt

**Scenario Validation Updates:**
- InvalidDestinationPath: ["i

--- a/examples/InteractiveConsoleAgent/InteractiveConsoleAgent.csproj
+++ b/examples/InteractiveConsoleAgent/InteractiveConsoleAgent.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Andy.Llm" Version="0.1.5" />
-    <PackageReference Include="Andy.Tools" Version="2025.9.5-rc.15" />
+    <PackageReference Include="Andy.Llm" Version="2025.11.19-rc.24" />
+    <PackageReference Include="Andy.Tools" Version="2025.10.16-rc.16" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
